# 2048

./: CMakeLists.txt  settings.cmake
include/: CLInterface.h  Engine.h  EngineInterface.h  Test.hpp
src/: Board.cpp  Board.hpp  CMakeLists.txt  Engine.cpp  SigalsAndSystemsTurorial.md  Test.cpp  Test.hpp  main.cpp
src/CLI/: CLI.c  CLI.h  CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/Frame/: CMakeLists.txt  Frame.cpp  Frame.h
